moved alignment and padding from widget to cell